# vkedu-c-cpp-hw

./: CMakeLists.txt  README.md  main.c
.github/workflows/: ci.yml
sky_lib/: CMakeLists.txt  errors.c  errors.h  struct.c  struct.h  utils.c  utils.h
sky_lib/inc/: defaults.h  errors.h  struct.h  utils.h
sky_lib/src/: errors.c  struct.c  utils.c
tests/: CMakeLists.txt  add.txt  contains.txt  get_line_normal.txt  list_filled.txt  sky_tests.cpp  start_string.txt
